visualizer is like basically completely broken rn but at least its not crashing anymore